# gbc-emulator

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md
include/: apu.h  cartridge.h  constants.h  cpu.h  debugger.h  emulator.h  input_handler.h  joypad.h  mmu.h  ppu.h  renderer.h  timer.h  utils.h
src/: cartridge.cpp  cpu.cpp  debugger.cpp  emulator.cpp  emulator.rs  input_handler.cpp  main.cpp  main.rs  mmu.cpp  ppu.cpp  renderer.cpp  timer.cpp
src/core/: cartridge.rs  cpu.rs  emulator.rs  mod.rs  ppu.rs  timer.rs  types.rs
src/ui/: app.rs
